# dino-adventure

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: release.yaml  test.yaml
dnas/dino_adventure/workdir/: dna.yaml
dnas/dino_adventure/zomes/coordinator/dino_adventure/: Cargo.toml
dnas/dino_adventure/zomes/coordinator/dino_adventure/src/: adventure.rs  all_adventures.rs  all_dinos.rs  dino.rs  invite.rs  lib.rs  nest.rs  ping.rs  types.rs
dnas/dino_adventure/zomes/coordinator/dino_adventure/tests/: adventure.rs  dino.rs  invite.rs  nest.rs  ping.rs
dnas/dino_adventure/zomes/integrity/dino_adventure/: Cargo.toml
dnas/dino_adventure/zomes/integrity/dino_adventure/src/: adventure.rs  dino.rs  lib.rs  nest.rs
tests/: .prettierrc  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
tests/src/dino_adventure/dino_adventure/: adventure.test.ts  all-dinos.test.ts  common.ts  dino.test.ts  invite.test.ts  nest.test.ts  ping.test.ts
ui/: eslint.config.mjs  index.html  package.json  svelte.config.js  test.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte  main.ts  types.ts
ui/src/api/: adventure.svelte.ts  all.svelte.ts  common.svelte.ts  dino.svelte.ts  dino.ts  index.ts  invite.svelte.ts  nest.svelte.ts  peer.svelte.ts  test.svelte.ts
ui/src/components/: Adventure.svelte  AdventureAssembly.svelte  AllAdventures.svelte  Connected.svelte  ConnectionsState.svelte  CreateDino.svelte  Dino.svelte  DinoGathering.svelte  FetchCount.svelte  MyArc.svelte  ParticpantSummary.svelte  PeerInfo.svelte  RawInfo.svelte
ui/src/dino_adventure/dino_adventure/: AllDinos.svelte  CreateDino.svelte  DinoDetail.svelte  EditDino.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
