[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.7.0-dev.11", default-features = false, features = ["sqlite-encrypted", "wasmer_sys", "transport-iroh"] }
hdi = "=0.8.0-dev.4"
hdk = "=0.7.0-dev.6"
holochain_client = "0.9.0-dev.10"
holochain_types = "0.7.0-dev.10"
holochain_serialized_bytes = "*"

serde = "1"
rand = "0.9"
tokio = "1.49"

[workspace.dependencies.dino_adventure]
path = "dnas/dino_adventure/zomes/coordinator/dino_adventure"

[workspace.dependencies.dino_adventure_integrity]
path = "dnas/dino_adventure/zomes/integrity/dino_adventure"
