[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.6.1-dev.4", default-features = false, features = ["sqlite-encrypted", "wasmer_sys", "transport-iroh"] }
hdi = "=0.7.1-rc.2"
hdk = "=0.6.1-rc.2"
holochain_client = "0.8.1-rc.4"
holochain_types = "0.6.1-rc.4"
holochain_trace = "0.6.1-rc.0"
holochain_serialized_bytes = "*"

serde = "1.0"
rand = "0.9"
tokio = "1.49"

[workspace.dependencies.dino_adventure]
path = "dnas/dino_adventure/zomes/coordinator/dino_adventure"

[workspace.dependencies.dino_adventure_integrity]
path = "dnas/dino_adventure/zomes/integrity/dino_adventure"
